fix small smells and add Readme.md